feat: 初步完成 history hash 路由

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>路由测试页</title>
+    <style>
+        #app {
+            display: flex;
+            text-align: center;
+            flex-direction: column;
+            margin-top: 200px;
+        }
+
+        a {
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div id="app" style="height: 200px; background-color: red;"></div>
-    <a href="#a">toa</a>
-    <a href="#b">tob</a>
-    <a href="#c">toc</a>
+    <div id="app"></div>
 </body>
 </html>
