refactor: optimizing code structor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </style>
 </head>
 <body>
+    <div>
+        <a href="./home">home</a>
+        <a href="./home/hello">hello</a>
+        <a href="another">another</a>
+    </div>
     <div id="app"></div>
     <div id="hello"></div>
     <div id="another"></div>
