feat: optimizing routes param structor and run component replace without changing URL

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
         <a href="./home">home</a>
         <a href="./home/hello">hello</a>
-        <a href="another">another</a>
+        <a href="./another">another</a>
     </div>
     <div id="app"></div>
     <div id="hello"></div>
