feat: hash and history

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,14 +19,23 @@
         }
     </style>
 </head>
+
 <body>
     <div>
+        history: 
         <a href="./home">home</a>
         <a href="./home/hello">hello</a>
         <a href="./another">another</a>
+    </div>
+    <div>
+        hash: 
+        <a href="#home">home</a>
+        <a href="#home/hello">hello</a>
+        <a href="#another">another</a>
     </div>
     <div id="app"></div>
     <div id="hello"></div>
     <div id="another"></div>
 </body>
+
 </html>
