--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
     <div>
         hash: 
-        <a href="#home">home</a>
-        <a href="#home/hello">hello</a>
-        <a href="#another">another</a>
+        <a href="#/home">home</a>
+        <a href="#/home/hello">hello</a>
+        <a href="#/another">another</a>
     </div>
     <div id="app"></div>
     <div id="hello"></div>
